Added extensive documentation for architecture including snapshot generalization, canonical language core, list controls, circular references, and patching strategies; implemented `JsonPointer` utility for normalized JSON pointers, added `PointerUtilsTest` for validation, and enhanced `MergeReverserTest` with inherited list handling logic.